bug: Change z-index of .overlay to 9999 (#11)

--- a/src/index.css
+++ b/src/index.css
@@ -1429,6 +1429,7 @@ input[type='checkbox']:checked {
   bottom: 0;
   right: 0;
   background: rgba(0,0,0,.7);
+  z-index: 9999;
 }
 .overlay__wrapper {
   width: 100%;
